syntax = "proto3";
import "base.proto";
package actor;

service ActorService {
  rpc getAllActors (base.Empty) returns (ActorsList);
  rpc getActorById (ActorId) returns (base.Actor);
  rpc createActor (CreateActor) returns (base.Actor);
  rpc updateActor (UpdateActor) returns (base.Actor);
  rpc deleteActor (ActorId) returns (base.Empty);
}

message ActorsList {
  repeated base.Actor actors = 1;
}

message ActorId {
  int32 id = 1;
}

message CreateActor {
  string name = 1;
  int32 birthYear = 2;
}

message UpdateActor {
  int32 id = 1;
  optional string name = 2;
  optional int32 birthYear = 3;
}