syntax = "proto3";
import "base.proto";
package movie;

service MovieService {
  rpc getAllMovies (base.Empty) returns (MoviesList);
  rpc getMovieById (MovieId) returns (base.Movie);
  rpc createMovie (CreateMovie) returns (base.Movie);
  rpc updateMovie (UpdateMovie) returns (base.Movie);
  rpc deleteMovie (MovieId) returns (base.Empty);
}

message MoviesList {
  repeated base.Movie movies = 1;
}

message MovieId {
  string id = 1; 
}

message CreateMovie {
  string title = 1;
  string director = 2;
  int32 releaseYear = 3;
  repeated int32 genreIds = 4;
  repeated int32 actorIds = 5;
}

message UpdateMovie {
  int32 id = 1;
  optional string title = 2;
  optional string director = 3;
  optional int32 releaseYear = 4;
  repeated int32 genreIds = 5;
  repeated int32 actorIds = 6;
}